--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: url('./bg.jpg') no-repeat center center/cover;
+  background: url('https://github.com/AmulyaMachhan/Digital-Clock/blob/gh-pages/bg.jpg') no-repeat center center/cover;
   font-family: 'Inter', sans-serif;
   color: white;
 }
